{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 1488,
  "lineage": "e210576f-3dcb-9593-f739-424c12b2cce0",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:loadbalancer/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091",
            "arn_suffix": "app/tf-lb-2024030814445339830000000a/1fef569ec8b28091",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2024030814445339830000000a-59340317.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:loadbalancer/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2024030814445339830000000a",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f7df104bdebed7e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b053e9d04f2c883"
              },
              {
                "subnet_id": "subnet-0c48b7aaa18314696"
              }
            ],
            "subnets": [
              "subnet-04b053e9d04f2c883",
              "subnet-0c48b7aaa18314696"
            ],
            "vpc_id": "vpc-0e2393ae2f9aea04c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340150000000b/5fc443e44d40960d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:loadbalancer/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_lb.alb",
            "module.application.aws_lb_target_group.front_tg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340390000000c/aa357a81a011c782",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener-rule/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8/c0f091ac54306e51",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/languages",
                      "/languages/*",
                      "/languages/*/*",
                      "/ok"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener-rule/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8/c0f091ac54306e51",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_lb.alb",
            "module.application.aws_lb_listener.front_listener",
            "module.application.aws_lb_target_group.back_tg",
            "module.application.aws_lb_target_group.front_tg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340150000000b/5fc443e44d40960d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener-rule/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8/70f74b48545aa66a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener-rule/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8/70f74b48545aa66a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:listener/app/tf-lb-2024030814445339830000000a/1fef569ec8b28091/d8fea64036ff27a8",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.aws_lb.alb",
            "module.application.aws_lb_listener.front_listener",
            "module.application.aws_lb_target_group.front_tg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340390000000c/aa357a81a011c782",
            "arn_suffix": "targetgroup/tf-2024030814445340390000000c/aa357a81a011c782",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/ok",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340390000000c/aa357a81a011c782",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-2024030814445340390000000c",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340150000000b/5fc443e44d40960d",
            "arn_suffix": "targetgroup/tf-2024030814445340150000000b/5fc443e44d40960d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382502416:targetgroup/tf-2024030814445340150000000b/5fc443e44d40960d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-2024030814445340150000000b",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02868af3c3df4b3aa",
            "arn": "arn:aws:ec2:us-west-2:992382502416:instance/i-08673026443e9034d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08673026443e9034d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7dd45d537919386",
            "private_dns": "ip-10-0-0-24.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.24",
            "public_ip": "34.215.196.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:992382502416:key/6608f91a-6687-4093-bf87-82af7584c671",
                "throughput": 0,
                "volume_id": "vol-0852b9e2dd6906572",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b053e9d04f2c883",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09403b344c96f9742"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c4673d596888a0",
            "domain": "vpc",
            "id": "eipalloc-0a8c4673d596888a0",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-148-192-35.us-west-2.compute.amazonaws.com",
            "public_ip": "54.148.192.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:internet-gateway/igw-002141ea05dab94c0",
            "id": "igw-002141ea05dab94c0",
            "owner_id": "992382502416",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c4673d596888a0",
            "association_id": "eipassoc-0dccab69f73aaca85",
            "connectivity_type": "public",
            "id": "nat-0ce94782e99ba0ff5",
            "network_interface_id": "eni-0cb581d10d8c05152",
            "private_ip": "10.0.0.42",
            "public_ip": "54.148.192.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b053e9d04f2c883"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:route-table/rtb-09f1195e994e30713",
            "id": "rtb-09f1195e994e30713",
            "owner_id": "992382502416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ce94782e99ba0ff5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:route-table/rtb-06eec2e4811e68e7a",
            "id": "rtb-06eec2e4811e68e7a",
            "owner_id": "992382502416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002141ea05dab94c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e05534a3ebd037",
            "route_table_id": "rtb-09f1195e994e30713",
            "subnet_id": "subnet-0f9c8bc1ee4c79192"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd672198fe4497c",
            "route_table_id": "rtb-09f1195e994e30713",
            "subnet_id": "subnet-04a977ef194773aa6"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069953422c68ebdbf",
            "route_table_id": "rtb-06eec2e4811e68e7a",
            "subnet_id": "subnet-04b053e9d04f2c883"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6d17079560d907",
            "route_table_id": "rtb-06eec2e4811e68e7a",
            "subnet_id": "subnet-0c48b7aaa18314696"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:subnet/subnet-0f9c8bc1ee4c79192",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c8bc1ee4c79192",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:subnet/subnet-04a977ef194773aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a977ef194773aa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:subnet/subnet-04b053e9d04f2c883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b053e9d04f2c883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:subnet/subnet-0c48b7aaa18314696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48b7aaa18314696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:vpc/vpc-0e2393ae2f9aea04c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00af39474252ce8b5",
            "default_route_table_id": "rtb-04285cb94147c4952",
            "default_security_group_id": "sg-0ee561c0413245eef",
            "dhcp_options_id": "dopt-0715f666f107e2526",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2393ae2f9aea04c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04285cb94147c4952",
            "owner_id": "992382502416"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:security-group/sg-0f7df104bdebed7e4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f7df104bdebed7e4",
            "ingress": [],
            "name": "terraform-20240308144429236400000005",
            "name_prefix": "terraform-",
            "owner_id": "992382502416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:security-group/sg-09403b344c96f9742",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09403b344c96f9742",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240308144429244100000007",
            "name_prefix": "terraform-",
            "owner_id": "992382502416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:security-group/sg-02a01b1995eadf1c6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02a01b1995eadf1c6",
            "ingress": [],
            "name": "terraform-20240308144429235900000004",
            "name_prefix": "terraform-",
            "owner_id": "992382502416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382502416:security-group/sg-028b2f96088c72702",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-028b2f96088c72702",
            "ingress": [],
            "name": "terraform-20240308144429237500000006",
            "name_prefix": "terraform-",
            "owner_id": "992382502416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2393ae2f9aea04c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ec2_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3393405204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a01b1995eadf1c6",
            "security_group_rule_id": "sgr-0e46203a5a18c186e",
            "self": false,
            "source_security_group_id": "sg-0f7df104bdebed7e4",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ec2_mongo_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2272179720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a01b1995eadf1c6",
            "security_group_rule_id": "sgr-0e38626bf214a415e",
            "self": false,
            "source_security_group_id": "sg-0f7df104bdebed7e4",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3915068292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f7df104bdebed7e4",
            "security_group_rule_id": "sgr-0a119b0afbf26cb75",
            "self": false,
            "source_security_group_id": "sg-02a01b1995eadf1c6",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3463648736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f7df104bdebed7e4",
            "security_group_rule_id": "sgr-06731c83f4c50a919",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2793567439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02a01b1995eadf1c6",
            "security_group_rule_id": "sgr-052842ab4cfdec6d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1371821635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-028b2f96088c72702",
            "security_group_rule_id": "sgr-0febaefcf4f597772",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.mongodb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 27017,
            "id": "sgrule-2503616482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-028b2f96088c72702",
            "security_group_rule_id": "sgr-09eaec33dfa4e4cba",
            "self": false,
            "source_security_group_id": "sg-02a01b1995eadf1c6",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1526163400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a01b1995eadf1c6",
            "security_group_rule_id": "sgr-0e8d22aa931c8b0e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02868af3c3df4b3aa",
            "arn": "arn:aws:ec2:us-west-2:992382502416:instance/i-0f80a77a96b5f1cde",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f80a77a96b5f1cde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038fefca189bb40c0",
            "private_dns": "ip-10-0-1-32.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:992382502416:key/6608f91a-6687-4093-bf87-82af7584c671",
                "throughput": 0,
                "volume_id": "vol-08ff5a81430b6004c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9c8bc1ee4c79192",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-028b2f96088c72702"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.mongodb_sg",
            "module.security.aws_security_group_rule.alb_ec2_http_ingress",
            "module.security.aws_security_group_rule.alb_ec2_mongo_ingress",
            "module.security.aws_security_group_rule.alb_egress",
            "module.security.aws_security_group_rule.alb_ingress",
            "module.security.aws_security_group_rule.ec2_egress",
            "module.security.aws_security_group_rule.mongo_egress",
            "module.security.aws_security_group_rule.mongo_ingress",
            "module.security.aws_security_group_rule.ssh_ingress"
          ]
        }
      ]
    }
  ]
}